# mcp-server-demo

./: .bumpversion.cfg  .gitignore  README.md  main.py  pyproject.toml
configurations/: claude_desktop_config.json
crash/3-simple-server-setup/: server.py
sticky_notes/: main.py
