[project]
name = "mcp-server-demo"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.14.1",
    "mcp[cli]>=1.25.0",
    "sqlalchemy>=2.0.45",
    "stytch>=14.0.0",
]

[tool.uv]
dev-dependencies = [
    "bump2version>=1.0.1",
    "pytest>=9.0.2",
]
