[project]
name = "mcp-server-demo"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.14.1",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "mcp[cli]>=1.25.0",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "stytch>=14.0.0",
]

[tool.uv]
dev-dependencies = [
    "bump2version>=1.0.1",
    "pytest>=9.0.2",
]
